Fixed graph icons on iOS

--- a/web/src/app/page.module.css
+++ b/web/src/app/page.module.css
@@ -636,9 +636,10 @@
   background: #ffffff;
   color: var(--text-primary);
   cursor: pointer;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  display: inline-block;
+  position: relative;
+  -webkit-appearance: none;
+  appearance: none;
   -webkit-tap-highlight-color: transparent;
   outline: none;
   transition:
@@ -654,6 +655,10 @@
 }
 
 .panelStepIconSvg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 13px;
   height: 13px;
   fill: none;
@@ -664,6 +669,10 @@
 }
 
 .panelStepIconImg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 13px;
   height: 13px;
   object-fit: contain;
